--- a/index.html
+++ b/index.html
@@ -15,24 +15,30 @@
   </style>
 </head>
 <body>
+  <div class="mainDiv">
+    <h1>Order Summary</h1>
 
-  <h1>Order Summary</h1>
+    <h2>You can now listen to millions of songs, audiobooks, and podcasts on any 
+    device anywhere you like!</h2>
 
-  <h2>You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!</h2>
-
-  <div class="orderOptions">
-    <div class="planInfo">
-      <h3>Annual Plan</h3>
-      <p>$59.99/year</p>
-      <button>Change</button>
+    <div class="orderOptions">
+      <div class="planInfo">
+        <div class="planCost">
+          <h3>Annual Plan</h3>
+          <p>$59.99/year</p>
+        </div>
+        <button>Change</button>
+      </div>
+      <div class="processButtons">
+        <button>Proceed to Payment</button>
+        <button>Cancel Order</button>
+      </div>
+      
     </div>
-    <button>Proceed to Payment</button>
-    <button>Cancel Order</button>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">weldedmuffins</a>.
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">weldedmuffins</a>.
+    </div>
   </div>
 </body>
 </html>
