--- a/index.html
+++ b/index.html
@@ -16,23 +16,28 @@
 </head>
 <body>
   <div class="mainDiv">
-    <h1>Order Summary</h1>
-
-    <h2>You can now listen to millions of songs, audiobooks, and podcasts on any 
-    device anywhere you like!</h2>
-
-    <div class="orderOptions">
+    <img class='headerpic' src='./images/illustration-hero.svg'/>
+    <div class="subDiv">
+      <h1>Order Summary</h1>
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+      device anywhere you like!</p>
+      <div class="orderOptions">
       <div class="planInfo">
         <div class="planCost">
-          <h3>Annual Plan</h3>
-          <p>$59.99/year</p>
+          <img class="planPic" src='./images/icon-music.svg'/>
+          <div>
+            <h3>Annual Plan</h3>
+            <p>$59.99/year</p>
+          </div>
+          <button>Change</button>
         </div>
-        <button>Change</button>
       </div>
       <div class="processButtons">
         <button>Proceed to Payment</button>
         <button>Cancel Order</button>
-      </div>
+      </div>  
+    </div>
+    
       
     </div>
     <div class="attribution">
