--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <div class="planCost">
           <img class="planPic" src='./images/icon-music.svg'/>
           <div>
-            <h3>Annual Plan</h3>
-            <p>$59.99/year</p>
+            <h3 class='planName'>Annual Plan</h3>
+            <p class='planAnnual'>$59.99/year</p>
           </div>
-          <button>Change</button>
+          <button id='changeButton'>Change</button>
         </div>
       </div>
       <div class="processButtons">
-        <button>Proceed to Payment</button>
-        <button>Cancel Order</button>
+        <button id='payButton'>Proceed to Payment</button>
+        <button id='cancelButton'>Cancel Order</button>
       </div>  
     </div>
     
